--- a/src/app/ajustes/ajustes.component.scss
+++ b/src/app/ajustes/ajustes.component.scss
@@ -22,12 +22,13 @@
   flex-direction: row;
   height: 100%;
   gap: 24px;
+  justify-content: center;
 }
 
 
 .formulario {
-  flex: 1;
-  max-width: 800px;
+  flex: 0 1 800px;
+  min-width: 300px;
   padding: 0 16px;
   border-radius: 12px;
   margin: 0 auto;
@@ -88,4 +89,40 @@ ion-item {
 ion-button.guardar {
   --background: #e67e22;
   --color: white;
+}
+
+
+@media (max-width: 500px) {
+  .layout {
+    flex-direction: column;
+    align-items: center; /* Centra horizontalmente los elementos */
+  }
+
+  app-menuizquierdaconfig {
+    width: 100%;
+    max-width: 800px; /* Mismo ancho máximo que el formulario */
+    margin-bottom: 20px;
+  }
+
+  .formulario {
+    width: 100%;
+    max-width: 800px;
+    padding: 16px;
+  }
+}
+
+/* Para pantallas muy pequeñas (móviles) */
+@media (max-width: 576px) {
+  .formulario {
+    max-width: 100%;
+    padding: 16px 8px;
+  }
+
+  .branding {
+    margin-bottom: 40px; /* Reducir espacio en móviles */
+  }
+
+  ion-item {
+    margin: 8px 0; /* Espaciado más compacto */
+  }
 }
