--- a/src/app/menuizquierdaconfig/menuizquierdaconfig.component.scss
+++ b/src/app/menuizquierdaconfig/menuizquierdaconfig.component.scss
@@ -59,3 +59,79 @@ ion-label {
 .espaciado{
   margin-top: 150px;
 }
+
+
+@media (max-width: 768px) {
+  .layout-container {
+    flex-direction: column;
+  }
+
+  .menu {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px; /* Altura fija más pequeña */
+    border-top: 2px solid var(--border-color);
+    border-right: none;
+    border-radius: 0;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    z-index: 999;
+    background-color: var(--background);
+  }
+
+  .espaciado {
+    margin-top: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  ion-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: stretch;
+    width: 100%;
+    padding: 0;
+    height: 100%;
+    margin: 0;
+  }
+
+  ion-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Esto centrará el contenido verticalmente */
+    --min-height: auto;
+    --padding-start: 0;
+    --padding-end: 0;
+    --inner-padding-end: 0;
+    --inner-padding-start: 0;
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
+    box-shadow: none;
+    width: auto;
+    height: 100%;
+  }
+
+  ion-item::part(native) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+  }
+
+  ion-label {
+    display: none !important; /* Asegura que el texto no se muestre */
+  }
+
+  ion-icon {
+    font-size: 28px !important;
+    margin: 0;
+    align-self: center; /* Asegura centrado vertical */
+  }
+}
