--- a/src/app/modificarperfil/modificarperfil.component.html
+++ b/src/app/modificarperfil/modificarperfil.component.html
@@ -53,7 +53,7 @@
       <ion-button expand="block" (click)="guardarCambios()" class="login-button">
         Guardar Cambios
       </ion-button>
-      <ion-button class="login-button">Restablecer</ion-button>
+      <ion-button class="login-button" style="float: right">Restablecer</ion-button>
     </div>
   </div>
 </ion-content>
