--- a/src/app/modificarperfil/modificarperfil.component.scss
+++ b/src/app/modificarperfil/modificarperfil.component.scss
@@ -19,20 +19,17 @@
   flex-direction: row;
   height: 100%;
   gap: 24px;
+  justify-content: center;
 }
 
-.menu-lateral {
-  width: 420px;
-  background-color: #fefefe;
-  border-right: 2px solid #ccc;
-  padding: 16px;
-  border-radius: 12px;
-}
 
 .formulario {
   flex: 1;
   max-width: 1200px;
+  justify-content: center;
+  min-width: 300px;
   padding: 0 16px;
+
   border-radius: 12px;
   margin: 0 auto;
   color: #333; /* default claro */
@@ -118,4 +115,21 @@
 .top-icons button {
   background: none;
   border: none;
+}
+@media (max-width: 768px) {
+  .layout {
+    flex-direction: column;
+    align-items: center; /* Centra horizontalmente */
+  }
+
+  app-menuizquierdaconfig {
+    width: 100%;
+  }
+
+  .formulario {
+    width: 100%;
+    max-width: 500px; /* Ajusta según necesites */
+    padding: 16px;
+    margin-bottom: 100px;
+  }
 }
