Espacios alerta corregido

--- a/src/app/alertas/alertas.component.scss
+++ b/src/app/alertas/alertas.component.scss
@@ -95,6 +95,8 @@ app-menuizquierdaconfig {
   overflow: hidden;
   width: 100%;
   max-width: 1000px; /* Aumentado de 800px */
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .product-card:hover {
