--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -15,6 +15,10 @@
   </div>
 
   <div class="searchbar-container">
+
+    <ion-button class="filter-button" [class.claro]="modo" [class.oscuro]="!modo" (click)="toggleMenu()">
+      <ion-icon name="filter-circle-outline"></ion-icon>
+    </ion-button>
     <ion-searchbar
       placeholder="Buscar producto..."
       class="input-item"
@@ -27,7 +31,7 @@
     </ion-button>
   </div>
 
-  <app-menuizquierda></app-menuizquierda>
+  <app-menuizquierda *ngIf="mostrarMenu"></app-menuizquierda>
 
   <!-- productos destacados -->
   <ng-container>
