--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -74,17 +74,18 @@
 /* ------------------ SEARCHBAR ------------------ */
 .searchbar-container {
   display: flex;
+  align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  gap: 12px;
   margin-bottom: 60px;
+  width: 100%;
 }
 
 .input-item {
   border-radius: 12px;
   height: 44px;
-  width: 45%;
-  min-width: 240px;
+  flex: 1;
+  min-width: 200px;
+  max-width: 600px;
 }
 
 .searchclaro {
@@ -101,13 +102,25 @@
   --border-color: #666666;
 }
 
-.search-button {
+.search-button, filter-button {
+    flex-shrink: 0;
+    margin: 0 4px;
   --background: #e67e22;
 
   ion-icon {
     font-size: 20px;
     color: #ffffff;
     transition: transform 0.2s ease;
+  }
+}
+.filter-button {
+  --background: #e77e3c;
+  --padding-start: 8px;
+  --padding-end: 8px;
+
+  ion-icon {
+    font-size: 24px;
+    color: #ffffff;
   }
 }
 
@@ -383,5 +396,13 @@ ion-card-title {
   .empresa-titulo {
     font-size: 1.3rem;
     margin-left: 12px;
+  }
+  .searchbar-container {
+    flex-wrap: nowrap;
+    padding: 0 8px;
+  }
+
+  .input-item {
+    min-width: 120px;
   }
 }
