--- a/src/app/alertas/alertas.component.html
+++ b/src/app/alertas/alertas.component.html
@@ -18,7 +18,7 @@
             <div class="text-content">
               <ion-card-title [class.claro]="modo" [class.oscuro]="!modo">{{ alerta.concepto }}</ion-card-title>
               <div class="fecha" [class.claro]="modo" [class.oscuro]="!modo">
-                Precio objetivo: €{{ alerta.precio }}
+                Precio objetivo: €{{ alerta.precioObjetivo }}
               </div>
             </div>
 
@@ -32,7 +32,6 @@
             </div>
           </div>
         </ion-card>
-
       </div>
     </div>
   </div>
