Temas de responsive el modificar perfil

--- a/src/app/modificarperfil/modificarperfil.component.html
+++ b/src/app/modificarperfil/modificarperfil.component.html
@@ -25,9 +25,10 @@
       </ion-item>
 
       <ion-item class="input-item" lines="none">
-        <ion-label position="floating">Nombre de usuario</ion-label>
+        <ion-label position="floating">Nombre Completo</ion-label>
         <ion-input [(ngModel)]="nombre" type="text"></ion-input>
       </ion-item>
+
 
       <ion-item class="input-item" lines="none">
         <ion-label position="floating" style="margin-bottom: 15px">Ubicación</ion-label>
@@ -37,6 +38,13 @@
           </ion-select-option>
         </ion-select>
       </ion-item>
+
+      <ion-item class="input-item" lines="none">
+        <ion-label position="floating">Nombre de usuario</ion-label>
+        <ion-input [(ngModel)]="nombre" type="text"></ion-input>
+      </ion-item>
+
+
 
       <ion-item class="input-item" lines="none">
         <ion-label position="floating">Correo electrónico</ion-label>
