--- a/src/app/modificarperfil/modificarperfil.component.scss
+++ b/src/app/modificarperfil/modificarperfil.component.scss
@@ -94,12 +94,32 @@
   --padding-end: 16px;
   --inner-padding-end: 0;
 }
+/* Asegura que todos los labels tengan el mismo comportamiento */
+.input-item ion-label[position="stacked"] {
+  transform-origin: top left;
+  transform: translateY(0) scale(0.75);
+  margin-bottom: 0;
+  transition: transform 150ms ease-in-out;
+  will-change: transform;
+}
+
+/* Estilo para cuando el select tiene valor (similar a los inputs) */
+.input-item.item-has-value ion-label[position="stacked"],
+.input-item.item-has-focus ion-label[position="stacked"] {
+  transform: translateY(0) scale(0.75);
+}
+
+/* Ajuste adicional para el select */
+.input-item ion-select {
+  --padding-top: 8px;
+  --padding-bottom: 8px;
+  margin-top: 4px;
+}
 
 /* Ajustes específicos para el label */
 .input-item ion-label[position="floating"] {
-  margin-top: 0;
+  margin-top: 10px;
   margin-bottom: 0;
-  transform-origin: center;
 }
 
 /* Ajustes para el input/select */
