modificar perfil FULL OPERATIVO

--- a/src/app/modificarperfil/modificarperfil.component.html
+++ b/src/app/modificarperfil/modificarperfil.component.html
@@ -49,7 +49,7 @@
 
       <ion-item class="input-item" lines="none">
         <ion-label position="floating">Contraseña</ion-label>
-        <ion-input [(ngModel)]="password" type="password"></ion-input>
+        <ion-input [(ngModel)]="password" type="password" placeholder="*******"></ion-input>
       </ion-item>
 
       <ion-button expand="block" (click)="guardarCambios()" class="login-button">
