--- a/src/app/alertas/alertas.component.scss
+++ b/src/app/alertas/alertas.component.scss
@@ -24,10 +24,6 @@
   box-sizing: border-box;
 }
 
-app-menuizquierdaconfig {
-  margin-right: 24px;
-  flex-shrink: 0;
-}
 
 .formulario {
   flex: 1;
@@ -35,29 +31,28 @@ app-menuizquierdaconfig {
   padding: 0 16px;
   border-radius: 12px;
   margin: 0 auto;
-  display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   box-sizing: border-box;
 }
 
+
 .branding {
   text-align: center;
-  margin-top: 16px;
-  margin-bottom: 24px;
-  width: 100%;
-}
+  margin-top: 24px;
+  margin-bottom: 60px;
 
-.branding h1 {
-  font-size: 1.8rem;
-  font-weight: bold;
-  color: #e67e22;
-  margin-bottom: 4px;
-}
+  h1 {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #e67e22;
+    margin-bottom: 4px;
+  }
 
-.branding p {
-  font-size: 0.95rem;
+  p {
+    font-size: 0.95rem;
+  }
 }
 
 .claro {
