--- a/src/app/historial/historial.component.scss
+++ b/src/app/historial/historial.component.scss
@@ -23,10 +23,14 @@
 
 .formulario {
   flex: 1;
-  max-width: 1200px;
+  max-width: 1400px;
   padding: 0 16px;
   border-radius: 12px;
   margin: 0 auto;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .branding {
