--- a/src/app/modificarperfil/modificarperfil.component.html
+++ b/src/app/modificarperfil/modificarperfil.component.html
@@ -44,7 +44,7 @@
 
       <ion-item class="input-item" lines="none">
         <ion-label position="floating">Correo electrónico</ion-label>
-        <ion-input [(ngModel)]="correo" type="email"></ion-input>
+        <ion-input [(ngModel)]="email" type="email"></ion-input>
       </ion-item>
 
       <ion-item class="input-item" lines="none">
