--- a/src/app/ajustes/ajustes.component.html
+++ b/src/app/ajustes/ajustes.component.html
@@ -36,7 +36,8 @@
       <!-- Notificaciones -->
       <ion-item [class.itemclaro]="modo" [class.itemoscuro]="!modo" lines="none">
         <ion-label [class.claro]="modo" [class.oscuro]="!modo">Notificaciones por email</ion-label>
-        <ion-toggle slot="end" [(ngModel)]="notificacionesEmailActivadas"></ion-toggle>
+        <ion-toggle
+          slot="end" [(ngModel)]="notificacionesEmailActivadas" (ionChange)="actualizarNotificacionesEmail()"></ion-toggle>
       </ion-item>
 
       <ion-item *ngIf="notificacionesEmailActivadas" [class.itemclaro]="modo" [class.itemoscuro]="!modo" lines="none">
