--- a/src/app/ajustes/ajustes.component.html
+++ b/src/app/ajustes/ajustes.component.html
@@ -44,7 +44,7 @@
         <ion-label position="stacked" [class.claro]="modo" [class.oscuro]="!modo">
           ¿A qué correo le enviamos las notificaciones?
         </ion-label>
-        <ion-input type="email" [(ngModel)]="correonotificaciones" [class.claro]="modo" [class.oscuro]="!modo"></ion-input>
+        <ion-input type="email" [(ngModel)]="correonotificaciones" [class.claro]="modo" [class.oscuro]="!modo" placeholder="Introduzca un correo electrónico"></ion-input>
         <div class="contenedor-guardar">
           <ion-button class="guardar" (click)="guardarCambios()">Guardar cambios</ion-button>
         </div>
